--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
                       <button mat-menu-item>
                         <span>My Profile</span>
                       </button>
-                      <button mat-menu-item>
+                      <button mat-menu-item (click) = "loginPush()">
                         <span>Login</span>
                       </button>
                       <button mat-menu-item>
