--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,1 @@
-<p>home works!1</p>
-<p>home works!2</p>
-<p>home works!3</p>
-<p>home works!4</p>
-<p>home works!5</p>
-<p>home works!6</p>
-<p>home works!7</p>
-<p>home works!8</p>
-<p>home works!9</p>
-<p>home works!0</p>
-<p>home works!1</p>
-<p>home works!2</p>
-<p>home works!3</p>
-<p>home works!4</p>
+<app-movie-card title="My Title sssss eeeeeeeeeee" image="http://snagfilms-a.akamaihd.net/34/83/5f9428234ea78a2724706064f3a1/oncoalriver-214x317.jpg?impolicy=resize&w=300&h=444"></app-movie-card>
