changed menu color, added logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="menu">
   <mat-toolbar-row>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <h1>BingeWatch</h1>
+    <link rel="icon" type="image/x-icon" href="bw.ico">
+    <h1>BingeWatch<img src="bw.png"></h1>
     <span class="menu-spacer"></span>
     <div>
       <a mat-button [routerLink]="['/home']"> Home </a>
