--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,14 @@
         justify-content: flex-end;
     }
 }
+
+
+.menu{
+    background-color: #FF6249;
+    color: white;
+    //#42350F;
+}
+
+.menu a{
+    font-size: large;
+}
