--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,30 @@
-
-    .image-logo {
-        width: 100px;
-    }
-    .menu{
-        background-color: blue;
-        color: white;
-        //#42350F;
-    
-    .menu a{
-        font-size: large;
-    }
+.image-logo {
+  width: 100px;
 }
 
+.menu {
+  background-color: blue;
+  color: white;
+  //#42350F;
 
+  .menu a {
+    font-size: large;
+  }
+}
 
+.app {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  width: 70%;
+}
+
+@media screen and (max-width:960px) {
+  .container {
+    width: 100%;
+  }
+}
