--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -1,17 +1,27 @@
 :host {
-    color: white;
-    .card-for-film {
-        width: 180px;
-    }
-    .img-card{
-        width: 180px;
-        height: 250px;
-    }
-    .img-class {
-        width: 180px;
-        height: 250px;
-    }
-    .title-card {
-        text-align: center;
-    }
+  color: white;
+
+  .card-for-film {
+    width: 180px;
+  }
+
+  .img-card {
+    width: 180px;
+    height: 250px;
+  }
+
+  .img-class {
+    width: 180px;
+    height: 250px;
+  }
+
+  .title-card {
+    text-align: center;
+  }
+
+  .serial-card {
+    text-align: center;
+    font-size: 0.8rem;
+    color: #888888;
+  }
 }
