--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,17 @@
 <mat-toolbar class="menu">
-  <mat-toolbar-row>
+  <mat-toolbar-row style="justify-content: space-around;">
     <img class="image-logo" src="../assets/bw3.png">
-    <span class="menu-spacer"></span>
-    <div>
+
+    <div class="menu-section">
       <a mat-button [routerLink]="['/home']"> Home </a>
       <a mat-button [routerLink]="['/calendar']"> Calendar </a>
       <a mat-button [routerLink]="['/tvshows']"> TV Shows </a>
       <a mat-button [routerLink]="['/create-contact']"> Movies </a>
     </div>
     <div class="left-part-of-navbar">
-      <mat-form-field>
-        <input matInput placeholder="Search">
+      <mat-form-field floatLabel="never">
+        <input class="search-input" matInput maxlength="100">
+        <mat-placeholder class="placeholder">Search</mat-placeholder>
       </mat-form-field>
       <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>person_pin</mat-icon>
