--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,11 @@
 :host {
-    .list-movies {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    
+  .list-movies {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .slides a {
+    width: 100%;
+  }
 }
