modified and responsive navbar
and we removed the excess page from the slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <mat-toolbar class="menu">
-  <mat-toolbar-row>
+  <mat-toolbar-row class="navbar">
     <img class="image-logo" src="../assets/bw3.png">
-    <span class="menu-spacer"></span>
-    <div>
+
+    <div class="menu-section">
       <a mat-button [routerLink]="['/home']"> Home </a>
       <a mat-button [routerLink]="['/calendar']"> Calendar </a>
       <a mat-button [routerLink]="['/tvshows']"> TV Shows </a>
       <a mat-button [routerLink]="['/create-contact']"> Movies </a>
     </div>
     <div class="left-part-of-navbar">
-      <mat-form-field>
-        <input matInput placeholder="Search">
+      <mat-form-field floatLabel="never">
+        <input class="search-input" matInput maxlength="100">
+        <mat-placeholder class="placeholder">Search</mat-placeholder>
       </mat-form-field>
-      <button mat-icon-button [matMenuTriggerFor]="menu">
+      <button class="account-btn" mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>person_pin</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
@@ -25,6 +26,17 @@
         <button mat-menu-item>
           <span>Logout</span>
         </button>
+      </mat-menu>
+
+      <button class="menu-btn" mat-icon-button [matMenuTriggerFor]="menuResponsive">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <mat-menu #menuResponsive="matMenu">
+        <a mat-menu-item [routerLink]="['/home']"> Home </a>
+        <a mat-menu-item [routerLink]="['/calendar']"> Calendar </a>
+        <a mat-menu-item [routerLink]="['/tvshows']"> TV Shows </a>
+        <a mat-menu-item [routerLink]="['/create-contact']"> Movies </a>
+
       </mat-menu>
     </div>
   </mat-toolbar-row>
