--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <a mat-button [routerLink]="['/home']"> Home </a>
       <a mat-button [routerLink]="['/calendar']"> Calendar </a>
       <a mat-button [routerLink]="['/tvshows']"> TV Shows </a>
-      <a mat-button [routerLink]="['/create-contact']"> Movies </a>
+      <a mat-button [routerLink]="['/movies']"> Movies </a>
     </div>
     <div class="left-part-of-navbar">
       <mat-form-field floatLabel="never">
