--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -3,6 +3,11 @@
 
   .card-for-film {
     width: 180px;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    cursor: pointer;
+    position: relative;
+    z-index: 100;
   }
 
   .img-card {
@@ -17,11 +22,39 @@
 
   .title-card {
     text-align: center;
+    overflow: hidden;
   }
 
   .serial-card {
     text-align: center;
     font-size: 0.8rem;
     color: #888888;
+  }
+
+  .hover-details {
+    display: none;
+    font-size: .8rem;
+  }
+
+  .card-for-film:hover {
+    .minimal-details {
+      opacity: .2;
+      filter: alpha(opacity=20);
+      transition: 0.3s;
+    }
+
+  }
+
+  .card-for-film:hover .hover-details {
+    display: block;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ffffff;
+    transition: 0.5s;
   }
 }
