--- a/src/app/tv-shows/tv-shows.component.html
+++ b/src/app/tv-shows/tv-shows.component.html
@@ -1,9 +1,8 @@
 <div class="app">
   <div class="container">
     <mat-grid-list cols={{breakpoint}} rowHeight={{ratio}} (window:resize)="onResize($event)" style="margin-top: 2em;">
-      <mat-grid-tile class="custom-mat-grid-tile" *ngFor="let serial of series">
-        <app-movie-card [title]="serial.name" [image]="serial.image" [noSeasons]="serial.noSeasons"
-          [noEpisodes]="serial.noEpisodes"></app-movie-card>
+      <mat-grid-tile class="custom-mat-grid-tile" *ngFor="let serial of data">
+        <app-movie-card [item]="serial"></app-movie-card>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
