Added scroll bar on cards

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,9 +12,8 @@
 }
 
 .menu {
-  background-color: blue;
+  background-color: #215885;
   color: white;
-  //#42350F;
 
   .menu-section a {
     font-size: 1.2rem;
