--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,8 @@
 .image-logo {
   width: 100px;
+  margin-top: 10px;
+  height: 70px;
+  margin-left: -5%;
 }
 
 .navbar {
@@ -14,6 +17,9 @@
 .menu {
   background-color: #215885;
   color: white;
+  border-radius:0 0 0 10px;
+  z-index: 101; 
+  position:fixed;
 
   .menu-section a {
     font-size: 1.2rem;
