faded navbar, fixed color in home carousel

--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -12,7 +12,7 @@
 
     }
     .carousel {
-        background-color: black;
+        background-color: inherit;
         margin: 0 20px 0 20px;
     }
 }
