--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,8 @@
   color: white;
   border-radius:0 0 0 10px;
   z-index: 101; 
-  position:fixed;
+  position:sticky;
+  top:0;
   opacity: 80%;
 
   .menu-section a {
