Fixed reload page bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <img class="image-logo" src="../assets/bw3.png">
 
     <div class="menu-section">
-      <a mat-button [routerLink]="['/home']"> Home </a>
-      <a mat-button [routerLink]="['/calendar']"> Calendar </a>
-      <a mat-button [routerLink]="['/tvshows']"> TV Shows </a>
-      <a mat-button [routerLink]="['/movies']"> Movies </a>
+      <a mat-button [routerLink]="['/home']" target="_top"> Home </a>
+      <a mat-button [routerLink]="['/calendar']" target="_top"> Calendar </a>
+      <a mat-button [routerLink]="['/tvshows']" target="_top"> TV Shows </a>
+      <a mat-button [routerLink]="['/movies']" target="_top"> Movies </a>
     </div>
     <div class="left-part-of-navbar">
       <mat-form-field floatLabel="never">
