--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <slideshow [height]="height" [minHeight]="'525px'" [autoPlay]="true" [showArrows]="false"
-    [lazyLoad]="imagesUrl?.length > 1" [autoPlayWaitForLazyLoad]="true" [imageUrls]="imagesUrl()">
+  [lazyLoad]="imagesUrl?.length > 1" [autoPlayWaitForLazyLoad]="true" [imageUrls]="imagesUrl()">
 </slideshow>
-<app-carousel title="Filme" [movieList]="movies"></app-carousel>
-<app-carousel title="Seriale" [movieList]="series"></app-carousel>
+<app-carousel title="Movies" [movieList]="movies"></app-carousel>
+<app-carousel title="Series" [movieList]="series"></app-carousel>
