--- a/src/app/tv-shows/tv-shows.component.html
+++ b/src/app/tv-shows/tv-shows.component.html
@@ -1,10 +1,9 @@
 <div class="app">
   <div class="container">
-    <mat-grid-list cols={{breakpoint}} rowHeight="1:2" (window:resize)="onResize($event)" [gutterSize]="0">
-      <mat-grid-tile class="custom-mat-grid-tile" *ngFor="let serial of series">
-        <app-movie-card [title]="serial.name" [image]="serial.image" [noSeasons]="serial.noSeasons"
-          [noEpisodes]="serial.noEpisodes"></app-movie-card>
-      </mat-grid-tile>
-    </mat-grid-list>
+    <div class="grid-list">
+      <div *ngFor="let serial of data">
+        <app-movie-card [item]="serial"></app-movie-card>
+      </div>
+    </div>
   </div>
 </div>
