--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -1,36 +1,39 @@
 :host {
 
     .content {
-        display: grid;
-        grid-template-areas:
-            'movieCard actionUserCard'
-            'serialCard seasonCard'
-
-        ;
-        grid-gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         .add-movie-card {
-            max-width: 700px;
+            max-width: 400px;
             text-align: center;
             grid-area: movieCard;
         }
 
         .action-to-user {
+            max-width: 400px;
             text-align: center;
             display: grid;
             grid-area: actionUserCard;;
         }
 
         .add-serial-card {
+            max-width: 400px;
             text-align: center;
             grid-area: serialCard;
         }
 
         .add-season-card {
+            max-width: 400px;
             text-align: center;
             grid-area: seasonCard;
         }
 
-    
+        .add-new-episode {
+            max-width: 400px;
+            text-align: center;
+        }
+
         mat-form-field {
             margin: 0 10px;
         }
@@ -40,7 +43,7 @@
         }
     
         .add-movie-button {
-            width: 350px;
+            width: 150px;
             color: white;
             background-color: dodgerblue;
         }
