--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,9 @@
-<p>calendar works!</p>
-<p>calendar works!</p>
-<p>calendar works!</p>
+<div class="app">
+    <div class="container">
+        <div class="grid-list">
+            <div *ngFor="let serial of data">
+                <app-movie-card [item]="serial"></app-movie-card>
+            </div>
+        </div>
+    </div>
+</div>
