Create registration page and service.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,6 +23,8 @@
       <div>
         <button class="button" type="submit" (click)="submit()" mat-button>Login</button>
       </div>
-
+      <div>
+        <button class="button-register" [routerLink]="['/registration']" mat-button>Register now</button>
+      </div>
     </form>
   </mat-card-content>
