--- a/src/app/tv-shows/tv-shows.component.html
+++ b/src/app/tv-shows/tv-shows.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="grid-list">
       <div *ngFor="let serial of data">
-        <app-movie-card [item]="serial"></app-movie-card>
+        <app-movie-card [routerLink]="['/movies/details']" [item]="serial"></app-movie-card>
       </div>
     </div>
   </div>
