--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,12 +5,15 @@
       <h2>Account Details</h2>
       <h3>Email : {{user.email}}</h3>
       <h3>User Role : {{user.userRole}}</h3>
-      <button class="friend-btn show-btn" (click)="changeData(user.id)">Show my movies and series</button>
+      <button class="friend-btn show-btn"
+        (click)="showHistory = !showHistory">{{ showHistory ? 'Show my movies and series history' :'Hide history'}}</button>
     </div>
-
+    <div class="history" [class.display]="showHistory">
+      <app-carousel title="History" [movieList]="history"></app-carousel>
+    </div>
     <div>
       <h1>Friends</h1>
-      <div class="friends grid-list" [class.show]="showFriends">
+      <div class="friends grid-list" [class.showMore]="showFriends">
         <div *ngFor="let friend of friends" class="friend-card">
           <h4>{{friend.name}}</h4>
           <button class="friend-btn show-btn" (click)="changeData(friend.id)">Show movies and series</button>
@@ -21,8 +24,8 @@
     </div>
 
     <div>
-      <h1>Movies</h1>
-      <div class="movies grid-list" [class.show]="showMovies">
+      <h1>Suggested Movies</h1>
+      <div class="movies grid-list" [class.showMore]="showMovies">
         <div *ngFor="let movie of movies">
           <app-movie-card [item]="movie"></app-movie-card>
         </div>
@@ -30,8 +33,8 @@
       <button class="show-btn" (click)="showMovies = !showMovies">{{ showMovies ? 'Show less': 'Show More' }}</button>
     </div>
     <div>
-      <h1>Series</h1>
-      <div class="series grid-list" [class.show]="showSeries">
+      <h1>Suggested Series</h1>
+      <div class="series grid-list" [class.showMore]="showSeries">
         <div *ngFor="let serie of tvSeries">
           <app-movie-card [item]="serie"></app-movie-card>
         </div>
