--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -16,14 +16,14 @@
 
   .slide {
     width: 260px !important;
-    height: 100%;
+    height: 380px;
   }
 
   .carousel {
     background-color: black;
     margin: 0 20px;
     // height: 100%;
-    max-height: 360px;
+    max-height: 380px;
     overflow: hidden;
   }
 
