--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -62,8 +62,11 @@
   width: 13em;
 }
 
+.display {
+  display: none
+}
 
-.show {
+.showMore {
   overflow: visible;
   height: auto;
 }
@@ -77,6 +80,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.history-horizontal-list {
+  display: flex;
+  overflow-x: hidden;
+}
+
 
 @media screen and (max-width:960px) {
   .container {
