--- a/src/app/components/movie-details-page/movie-details-page.component.scss
+++ b/src/app/components/movie-details-page/movie-details-page.component.scss
@@ -1,23 +1,46 @@
-.box {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+.content-left img{
+    width: 400px;
+    height: 600px;
+
 }
 
-.content-left img{
-    width: 182px;
-    height: 268px;
+.content-left button{
+    margin-left: 7%;
+    margin-top:4%;
 }
 
 .content-left{
-    padding: 10px;
+   margin-top: 5vh;
+   margin-left: 5vw; 
+   border-top:2vh solid white;
+   border-bottom:2vh solid white;
+   width: min-content;
+   float: left;
+   border-radius: 25px;
+   background-color: white;
 }
+
+.content-right{
+    display: inline block;
+    margin-top: 7vh;
+    padding-left: 550px; 
+    color:rgb(61, 82, 104);
+
+}
+
 
 .header{
     min-height: 58px;
     display: block;
     padding-left: 10px;
+    background-color: #22374D;
+    padding-left: 10vw;
+    padding-top: 1vh;
+    margin-left:1vw;
+    margin-right:1vw;
+    border-radius: 25px;
+    text-align: center;
+
 }
 
 .header p,.header h1{
@@ -36,3 +59,4 @@
 .rating{
     display: flex-end;
 }
+
