Friends and image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
         <a mat-menu-item [routerLink]="['/home']"> Home </a>
         <a mat-menu-item [routerLink]="['/calendar']"> Calendar </a>
         <a mat-menu-item [routerLink]="['/tvshows']"> TV Shows </a>
-        <a mat-menu-item [routerLink]="['/create-contact']"> Movies </a>
+        <a mat-menu-item [routerLink]="['/movies']"> Movies </a>
 
       </mat-menu>
     </div>
