--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,17 +1,17 @@
 :host {
     .card {
         text-align: center;
-        margin: 0 240px;
-        top: 200px;
+        margin: 150px 0;
+        // top: 200px;
 
         .button {
-            width: 350px;
+            width: 300px;
             color: white;
             background-color: dodgerblue;
             margin-bottom: 5px;
         }
         .button-register {
-            width: 350px;
+            width: 300px;
             color: white;
             background-color: dodgerblue;
         }
