--- a/src/app/components/movie-details-page/movie-details-page.component.html
+++ b/src/app/components/movie-details-page/movie-details-page.component.html
@@ -1,23 +1,24 @@
 <div class="app">
-    <br>
-    <div class="header">
-        <h1>Title my &nbsp;<span>(year)</span></h1>
-        <div>
-            <p class="material-icons">Current rating</p>
-        </div>
+  <br>
+  <div class="header">
+    <h1>{{this.item.name}} &nbsp;<span>({{this.item.releaseYear}})</span></h1>
+    <div>
+      <p class="material-icons">Current rating</p>
     </div>
-    <div class="content-left">
-        <img
-            src="https://m.media-amazon.com/images/M/MV5BMzgwODk3ODA1NF5BMl5BanBnXkFtZTcwNjU3NjQ0Nw@@._V1_SY1000_CR0,0,675,1000_AL_.jpg">
+  </div>
+  <div class="content-left">
+    <img src="{{this.item.image}}">
 
-        <button mat-raised-button>adaugare in istoric</button>
-        <button mat-raised-button>adaugare in "to watch"</button>
+    <button mat-raised-button
+      (click)="addInHistory()">{{this.isAddedInHistory ? "Added in History" : "Add in History"}}</button>
+    <button mat-raised-button
+      (click)="addInWatchLater()">{{this.isAddedInWatchLater ? "Added in Watch Later" : "Add in Watch later"}}</button>
 
-    </div>
-    <div class="content-right">
-        <h2>DESCRIERE</h2>
-        <h3>Aici este o descriere</h3>
-    </div>
+  </div>
+  <div class="content-right">
+    <h2>Description</h2>
+    <p>{{this.item.description}}</p>
+  </div>
 
 
 </div>
